--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="vitrendz-favicon.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
                 VITrendz
               </a>
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" style="margin-left: 2vw;" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item  active">
                   <a class="nav-link" href="main.html">Whatsapp group links</a>
