added insta link

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%);
                         <hr class="my-4">
                         <p>Fllow us on instagram for amazing memes</p>
                         <p class="lead">
-                            <button id="insta" type="button" class="btn btn-md btn-so">
+                            <a id="insta" type="button" class="btn btn-md btn-so" href="https://www.instagram.com/vitrendz/">
                                 <i class="fa fa-instagram pr-1"></i>
                                 <span>VITrendz</span>
-                              </button>
+                            </a>
                         </p>
                     </div>
                 </div>
